--- a/NetBeans/gamecopilot/src/main/java/view/ShoppingCartWindow.form
+++ b/NetBeans/gamecopilot/src/main/java/view/ShoppingCartWindow.form
@@ -97,9 +97,9 @@
                                   <Component id="btnRemove" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="btnCheckout" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
-                                  <Component id="btnBackToStore" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                  <Component id="btnBackToStore" min="-2" pref="40" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -206,6 +206,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtTitle">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
@@ -226,6 +229,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtPrice">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
